<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Wojciech Kukiełczak
  ~ Copyright (c) 2017 360dialog. All rights reserved.
  ~
  ~ Last modified 11/30/17 11:04 AM
  -->

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.d360.hello360.ui.inbox.InboxActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </android.support.design.widget.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_inbox" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/standard_12"
        fab:menu_backgroundColor="#48000000"
        android:layout_gravity="bottom|end">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_inbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_label="@string/inbox_fab_inbox"
            android:src="@drawable/ic_inbox_message"
            />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_label="@string/inbox_fab_notification"
            android:src="@drawable/ic_notification"
            />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_inapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_label="@string/inbox_fab_inapp"
            android:src="@drawable/ic_inapp"
            />

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
